--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>
 <a id="what-does-it-do" class="anchor" href="#what-does-it-do" aria-hidden="true"><span class="octicon octicon-link"></span></a>What does it do?</h3>
 
-<p>Notes generates MIDI files for use with a DAW (Digital Audio Workstation). All DAWs are capable of MIDI playback however Notes was tested using Ableton Live. The procedural generation process used in Notes is explained well in <a href="https://www.youtube.com/watch?v=3Z8CuAC_-bg">this short video</a> and similar tools are available in <a href="https://github.com/igorski/molecular-music-generator">java</a>, <a href="http://www.tomsnively.com/games/MolecularMusicBox.html">a Unity based web version</a> and a <a href="http://www.native-instruments.com/en/community/reaktor-user-library/entry/show/7997/">Native Instruments plugin</a>. Notes operates in terminal and generates a midi file based on the inputted rules.  </p>
+<p>Notes generates MIDI files for use with a DAW (Digital Audio Workstation). All DAWs are capable of MIDI playback however Notes was tested using Ableton Live. The procedural generation process used in Notes is explained well in <a href="https://www.youtube.com/watch?v=3Z8CuAC_-bg">this short video</a> and similar tools are available in <a href="https://github.com/igorski/molecular-music-generator">Java</a>, <a href="http://www.tomsnively.com/games/MolecularMusicBox.html">Unity</a> and as a <a href="http://www.native-instruments.com/en/community/reaktor-user-library/entry/show/7997/">Native Instruments plugin</a>. Notes operates in terminal and generates a midi file based on the inputted rules.  </p>
 
 <h3>
 <a id="demonstration-tracks" class="anchor" href="#demonstration-tracks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demonstration Tracks</h3>
