--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Notes by jamesrobertcarthew</title>
+    <meta name="description" content="Notes : Notes procedurally generates melodies and beats">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Notes</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Notes</h1>
-        <p class="header">Notes procedurally generates melodies and beats</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/jamesrobertcarthew/notes/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/jamesrobertcarthew/notes/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/jamesrobertcarthew/notes">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/jamesrobertcarthew/notes">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jamesrobertcarthew">jamesrobertcarthew</a></p>
+          <h1 id="project_title">Notes</h1>
+          <h2 id="project_tagline">Notes procedurally generates melodies and beats</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/jamesrobertcarthew/notes/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/jamesrobertcarthew/notes/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a id="what-does-it-do" class="anchor" href="#what-does-it-do" aria-hidden="true"><span class="octicon octicon-link"></span></a>What does it do?</h3>
 
@@ -47,7 +48,7 @@
 <li>Ensure you have Python installed by typing <code>python -v</code> into the terminal.<br>
 </li>
 <li>
-<a href="https://github.com/jamesrobertcarthew/notes/archive/master.zip"> Download Notes </a><br>
+<a href="https://github.com/jamesrobertcarthew/notes/archive/master.zip"> Download Notes. </a><br>
 </li>
 <li>Navigate to the Notes directory in terminal: <em>cd </em>. If you have no experience with using terminal have a <a href="http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line">read through this.</a><br>
 </li>
@@ -70,11 +71,17 @@ where <code>3 4</code> determine two time intervals and <code>-i 5</code> determ
 For a complete list of options available:<br>
 <code>python notes.py -h</code></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Notes maintained by <a href="https://github.com/jamesrobertcarthew">jamesrobertcarthew</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
