--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <li>
 <a href="https://github.com/jamesrobertcarthew/notes/archive/master.zip"> Download Notes. </a><br>
 </li>
-<li>Navigate to the Notes directory in terminal: <em>cd </em>. If you have no experience with using terminal have a <a href="http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line">read through this.</a><br>
+<li>Navigate to the Notes/PYTHON directory in terminal: <em>cd </em>. If you have no experience with using terminal have a <a href="http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line">read through this.</a><br>
 </li>
 <li>Notes requires <del><a href="http://www.numpy.org/"> numpy</a> and </del><a href="https://code.google.com/p/midiutil/"> midiutil</a>. To install these dependancies you can try running <code>pip install -r requirements.txt</code> or follow the links for alternate methods.<br>
 </li>
